--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -7,8 +7,8 @@
 <div uib-collapse="!d.inviteOpen" compile-html="d.html" expanding="d.inviteExpand()"></div>
 
 @*<div class="ad" data-ng-dfp-ad-container>
-    <div data-ng-dfp-ad="div-gpt-ad-1461243129238-0" data-ng-dfp-ad-hide-when-empty></div>
-</div>*@
+        <div data-ng-dfp-ad="div-gpt-ad-1461243129238-0" data-ng-dfp-ad-hide-when-empty></div>
+    </div>*@
 <div class="page-title">
     <h1>@DashboardResource.Title</h1>
 </div>
@@ -35,13 +35,16 @@
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" flex="100" class="flex">
         @{ Html.RenderPartial("_University");}
     </div>
+    <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
+        @{ Html.RenderPartial("_FlashcardsPromo");}
+    </div>
     <div ng-if="d.showLeaderboard" flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
         @* ReSharper disable once Mvc.PartialViewNotResolved *@
         @{ Html.RenderPartial("_Leaderboard", DashboardResource.LeaderboardTitle);}
     </div>
     @*<div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
-        @{ Html.RenderPartial("_Gamification");}
-    </div>*@
+            @{ Html.RenderPartial("_Gamification");}
+        </div>*@
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" ng-repeat="e in d.boxes track by e.id" class="flex">
         <div class="box-cube">
             <div ng-include="'box-template.html'"></div>
@@ -61,8 +64,8 @@
         </div>
     </div>
     @*<div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" ng-repeat="e in ::d.suggested" class="flex">
-        <div class="box-cube">
-            <div ng-include="'box-template.html'"></div>
-        </div>
-    </div>*@
+            <div class="box-cube">
+                <div ng-include="'box-template.html'"></div>
+            </div>
+        </div>*@
 </div>
