Implmented kinda flipclock

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
@@ -1,9 +1,7 @@
 ﻿<div class="promo-box box-style">
     <div class="top">
         <div class="title"></div>
-        <div class="timer">
-
-        </div>
+        <flip-clock></flip-clock>
     </div>
     <div class="bottom">
         <div class="stats">
