--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -35,12 +35,13 @@
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" flex="100" class="flex">
         @{ Html.RenderPartial("_University");}
     </div>
-    <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
-        @{ Html.RenderPartial("_FlashcardsPromo");}
-    </div>
-    <div ng-if="d.showLeaderboard" flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
+    @*<div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
+       
+    </div>*@
+    <div ng-hide="lb.hideBox" flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100" ng-controller="DashboardLeaderboard as lb">
         @* ReSharper disable once Mvc.PartialViewNotResolved *@
         @{ Html.RenderPartial("_Leaderboard", DashboardResource.LeaderboardTitle);}
+        @{ Html.RenderPartial("_FlashcardsPromo");}
     </div>
     @*<div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
             @{ Html.RenderPartial("_Gamification");}
