--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -1,19 +1,19 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @model string
-<div class="light leaderboard leaderboardbox box-style" ng-controller="LeaderboardController as lb">
-        <div class="portlet-body">
-            <h4 class="uppercase">@Model</h4>
-            <div class="r-table">
-                <div class="r-table-row" ng-repeat="l in ::lb.leaderboard">
-                    <div class="r-table-cell">
-                        <a href="{{::l.url}}" ga-track-event="['leaderboard', 'userPage']">
-                            <user-image class="img-circle" name="l.name" image="l.image" width="30" height="30"></user-image>
-                            <span class="user-name" ng-bind="::l.name"></span>
-                        </a>
-                    </div>
-                    <div class="r-table-cell">{{::$index + 1}}</div>
-                    <div class="r-table-cell last">{{::l.score}} @IndexResources.Pts</div>
+<div class="light leaderboard leaderboardbox box-style" ng-if="!lb.hideLeaderBoard">
+    <div class="portlet-body">
+        <h4 class="uppercase">@Model</h4>
+        <div class="r-table">
+            <div class="r-table-row" ng-repeat="l in ::lb.leaderboard">
+                <div class="r-table-cell">
+                    <a ng-href="{{::l.url}}" ga-track-event="['leaderboard', 'userPage']">
+                        <user-image class="img-circle" name="l.name" image="l.image" width="30" height="30"></user-image>
+                        <span class="user-name" ng-bind="::l.name"></span>
+                    </a>
                 </div>
+                <div class="r-table-cell" ng-bind="::$index + 1"></div>
+                <div class="r-table-cell last">{{::l.score}} @IndexResources.Pts</div>
             </div>
         </div>
     </div>
+</div>
