final touches to flashcard promo

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
@@ -20,6 +20,6 @@
                 </div>
             </div>
         </div>
-        <div class="info"></div>
+        <div class="info" ng-click="lb.details()">click</div>
     </div>
 </div>
