--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
@@ -1,22 +1,24 @@
 ﻿<div class="promo-box box-style">
-    <div class="top">
-        <div class="title"></div>
-        <flip-clock></flip-clock>
+    <div class="top" style="background: #FFCB0B">
+        <div class="title">Flashcard Contest Ends</div>
+        <div class="clock-container">
+            <flip-clock></flip-clock>
+        </div>
     </div>
-    <div class="bottom">
+    <div class="bottom" style="background: #002E62">
         <div class="stats">
             <div class="rank">
                 <div class="title">Your Rank</div>
-                <div class="count">
+                <div class="count" style="color: #002E62">
+                    <div class="icon">#</div>
                     <div class="num">20</div>
-                    <div class="icon"></div>
                 </div>
             </div>
-            <div class="likes">
+            <div class="likes" style="color: #002E62">
                 <div class="title">Your Likes</div>
                 <div class="count">
+                    <md-icon class="icon" md-svg-icon="b:like"></md-icon>
                     <div class="num">100</div>
-                    <div class="icon"></div>
                 </div>
             </div>
         </div>
