--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -167,7 +167,23 @@
     flex-direction: column;
 
     .top {
+        .displayFlex;
+        .align-items(flex-start);
+        .justifyContet(center);
         flex-grow: 1;
+        flex-wrap: wrap;
+
+        .title {
+            font-size: 24px;
+            font-weight: bold;
+            line-height: normal;
+            padding-top: 10px;
+        }
+
+        .clock-container {
+            .displayFlex;
+            padding-bottom: 24px;
+        }
     }
 
     .bottom {
@@ -178,17 +194,39 @@
             .align-items(center);
             .justifyContet(center);
 
+            .title {
+                color: @textColorWhite;
+            }
+
             .rank, .likes {
                 margin: 0 10px;
                 text-align: center;
 
-                .num {
-                    width: 100px;
-                    border: 1px solid #888b8e;
-                    padding: 5px;
+                .count {
+                    width: 90px;
+                    box-shadow: inset 0 0 2px black;
+                    background: @textColorWhite;
                     margin-top: 5px;
                     border-radius: 5px;
+                    font-weight: bold;
+                    font-size: 20px;
+                    line-height: 12px;
+                    .displayFlex;
+                    .align-items(center);
+                    .justifyContet(center);
+                    height: 28px;
                 }
+            }
+
+            .rank .num span {
+                font-size: 15px;
+                margin-right: 4px;
+            }
+
+            .likes .icon {
+                width: 18px;
+                height: 18px;
+                margin-right: 4px;
             }
         }
     }
