--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.rtl.css
@@ -176,7 +176,27 @@
   flex-direction: column;
 }
 .promo-box .top {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-justify-content: center;
+  justify-content: center;
   flex-grow: 1;
+  flex-wrap: wrap;
+}
+.promo-box .top .title {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: normal;
+  padding-top: 10px;
+}
+.promo-box .top .clock-container {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  padding-bottom: 24px;
 }
 .promo-box .bottom {
   padding: 5px;
@@ -190,16 +210,39 @@
   -webkit-justify-content: center;
   justify-content: center;
 }
+.promo-box .bottom .stats .title {
+  color: #ffffff;
+}
 .promo-box .bottom .stats .rank,
 .promo-box .bottom .stats .likes {
   margin: 0 10px;
   text-align: center;
 }
-.promo-box .bottom .stats .rank .num,
-.promo-box .bottom .stats .likes .num {
-  width: 100px;
-  border: 1px solid #888b8e;
-  padding: 5px;
+.promo-box .bottom .stats .rank .count,
+.promo-box .bottom .stats .likes .count {
+  width: 90px;
+  box-shadow: inset 0 0 2px black;
+  background: #ffffff;
   margin-top: 5px;
   border-radius: 5px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 12px;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  height: 28px;
+}
+.promo-box .bottom .stats .rank .num span {
+  font-size: 15px;
+  margin-left: 4px;
+}
+.promo-box .bottom .stats .likes .icon {
+  width: 18px;
+  height: 18px;
+  margin-left: 4px;
 }
