--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
@@ -22,6 +22,6 @@
                 </div>
             </div>
         </div>
-        <div class="info" ng-click="lb.details()">click</div>
+        <md-icon class="info" md-svg-icon="t:info-bubble" ng-click="lb.details()"></md-icon>
     </div>
 </div>
