--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
@@ -54,6 +54,16 @@
         top: 0;
         bottom: 0;
         right: 0;*/
+        //&:before {
+        //    position: absolute;
+        //    left: 0;
+        //    top: 0;
+        //    bottom: 0;
+        //    right: 0;
+        //    //content: attr(backgroundurl);
+        //    //background-image: attr(backgroundurl);
+        //}
+
         .loader {
             display: none;
             position: fixed;
