--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
@@ -1,5 +1,4 @@
-﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Box.Resources
-@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 <div ng-controller="UniversityController as u" univeristy-cover="{{::u.info.cover}}">
     <a class="university" ga-track-event="['dashboard', 'to university']" ng-if="u.loaded" ng-href="{{::u.info.url}}">
         <div class="top">
