--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <head>
     @Html.Css2("homePage")
     @*@Styles.Render("~/homePage")*@
-    
+
     @{Html.RenderPartial("_Head");}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
@@ -51,8 +51,8 @@
     <div class="page-content">
         @* ReSharper disable once Mvc.PartialViewNotResolved *@
         @{Html.RenderPartial("_StaticPageHeader");}
-        <div class="home-page-body">
-            <section class="main" data-image="@Model.HomePageUniversityData.BackgroundImage">
+        <div class="home-page-body" background-cover data-image="@Model.HomePageUniversityData.BackgroundImage">
+            <section class="main">
                 <div class="forms">
                     <div class="loader">
                         <div class="backdrop"></div>
