--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Promotion.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Promotion.cshtml
@@ -43,9 +43,14 @@
     <div>
         @* ReSharper disable once Mvc.PartialViewNotResolved *@
         @{Html.RenderPartial("_StaticPageHeader");}
-        <div class="home-page-body">
+        <div background-cover data-image="@Model.HomePageUniversityData.BackgroundImage">
+
+        </div>
+        
+        <div class="home-page-body" >
             <section class="main">
                 <div id="main-wrapper">
+                    <img class="promo-title" alt="win 500$ on your spitball flashcard" src=@Url.CdnContent("~/Images/Site/promo.png") />
                     <div class="welcome-text">
                         <div class="uni-logo-wrapper">
                             <div class="sb-logo">
