--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
@@ -1470,6 +1470,9 @@ iframe {
   height: 100%;
 }
 .promo-page [background-cover] {
+  -ms-filter: blur(2px) brightness(0.4);
+  -moz-filter: blur(2px) brightness(0.4);
+  -webkit-filter: blur(2px) brightness(0.4);
   filter: blur(2px) brightness(0.4);
   position: absolute;
   top: 0;
@@ -1486,6 +1489,8 @@ iframe {
   width: 35%;
   transform: translateY(-50%);
   top: 50%;
+  max-width: 670px;
+  width: calc(100% - 20px);
 }
 .promo-page .home-page-body {
   position: relative;
