--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
@@ -1,6 +1,8 @@
 ﻿<md-dialog class="promo-info-dialog">
     <md-toolbar style="background: #FFCB0B">
-        <md-icon class="close" md-svg-icon="t:close"></md-icon>
+        <md-button class="close">
+            <md-icon md-svg-icon="t:close"></md-icon>
+        </md-button>
         <h1 style="color: #002E62">Flashcard Launch Contest</h1>
         <h2>November 28th - December 15th</h2>
     </md-toolbar>
