--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.css
@@ -192,6 +192,13 @@
   position: absolute;
   top: 12px;
   right: 12px;
+  min-width: 0;
+  padding: 4px;
+  line-height: 0;
+  min-height: 0;
+  margin: 0;
+}
+.promo-info-dialog md-toolbar .close md-icon {
   fill: #212325;
   width: 20px;
   height: 20px;
