--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -212,9 +212,17 @@
             position: absolute;
             top: 12px;
             right: 12px;
-            fill: @textColorBlack;
-            width: 20px;
-            height: 20px;
+            min-width: 0;
+            padding: 4px;
+            line-height: 0;
+            min-height: 0;
+            margin: 0;
+
+            md-icon {
+                fill: @textColorBlack;
+                width: 20px;
+                height: 20px;
+            }
         }
 
         h1, h2 {
