--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
@@ -1,6 +1,6 @@
 ﻿<md-dialog class="promo-info-dialog">
     <md-toolbar ng-style="{'background': '{{::dp.colorB}}'}" >
-        <md-button class="close">
+        <md-button class="close" ng-click="db.close()">
             <md-icon md-svg-icon="t:close"></md-icon>
         </md-button>
         <h2>November 28th - December 15th</h2>
